2010-09-27	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/gen_list.c:
	  - added bytecmp, has_str_changed, has_md_changed, compare_single_acl,
	    has_acl_changed, cmp_xattr_node, have_xattrs_changed (copied and
	    renamed from src/compare_db.c)
	  - added get_changed_attributes function

2010-09-24	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* include/compare_db.h: removed init_rxlst function
	* include/db_config.h: include seltree.h after #define DB_ATTR_TYPE
	* include/seltree.h:
	  - use DB_ATTR_TYPE instead of int for attr
	  - added DB_ATTR_TYPE changed_attrs to seltree struct

2010-09-23	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/compare_db.c:
	  - removed unused functions (find_line_match, init_rxlst, eat_files_indir)
	  - compare ignorelist/forced_attrs with DB_ATTR_UNDEF instead of -1
	  - renamed e2fsattrs2char function to e2fsattrs2string
	  - use str_has_changed instead of compare_str
	  - added debug output to md_has_changed
	  - use md_has_changed instead of compare_md_entries
	  - removed obsolete functions (compare_str, compare_md_entries)

2010-09-17	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/compare_db.c: fixed compiler warning if WITH_AUDIT is not defined

2010-09-11	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Documented '-E' in man page and '--help' text

2010-09-10	Richard van den Berg  <richard@vdberg.org>
	* Released version 0.15.1
	* Changed version to post-0.15.1

2010-09-07	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Ignore changed file name if attributes does not match
	* Allow absence of DB_CHECKINODE if file name has changed

2010-08-08	Richard van den Berg  <richard@vdberg.org>
	* Added mkgitsnapshot.sh to contrib/
	* Released version 0.15
	* Changed version to post-0.15

2010-08-06	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Updated copyright notices of list.h, list.c, md.h, md,c, symboltable.h,
	  symboltable.c, util.h and util.c
	* Escaped '-' that really mean '-' in man pages