@@ -4,6 +4,7 @@
 	    has_acl_changed, cmp_xattr_node, have_xattrs_changed (copied and
 	    renamed from src/compare_db.c)
 	  - added get_changed_attributes function
+	  - use get_changed_attributes instead of compare_dbline
 
 2010-09-24	Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* include/compare_db.h: removed init_rxlst function
